# simulacra_rs

./: .gitignore  Cargo.toml  README.md  memory.db
crates/cli/: Cargo.toml
crates/db/: Cargo.toml
crates/db/src/: datastore.rs  lib.rs
crates/llm/: Cargo.toml
crates/llm/src/: main.rs  openai.rs
crates/llm_memory/: Cargo.toml
crates/llm_memory/src/: lib.rs
crates/llm_model/: Cargo.toml
crates/memory/: Cargo.toml
crates/memory/src/: cognition.rs  datastore.rs  lib.rs  main.rs
crates/npc/: Cargo.toml
crates/npc/prompt/: npc.txt  place.txt
crates/prompt/: Cargo.toml
crates/prompt/src/: lib.rs
crates/prompt/template/: npc.txt  place.txt  world.txt
crates/simulacra/: Cargo.toml
crates/simulacra/src/: agent.rs  lib.rs
crates/simulacra_cli/: Cargo.toml
crates/simulacra_cli/src/: main.rs
crates/simulacra_lib/: Cargo.toml
crates/simulacra_lib/prompts/: prompt_create_plot.txt  prompt_create_style_writing.txt  prompt_create_world.txt  prompt_identity_writer.txt  prompt_style.txt  template_create_npc.txt  template_create_place.txt  template_create_style_writing.txt  (+3 more)
crates/simulacra_web/: Cargo.toml
crates/web/: Cargo.toml
crates/web/src/: main.rs
crates/workflow/: Cargo.toml
prompt/: create_npc.txt  prompt_create_npcs.txt
simulation/: random_world.yaml
simulation_files/fantasy_world/: create_npc.txt  create_world.txt  identity_writer.txt  test.txt
simulation_files/random_world/: create_place.txt  create_plot.txt  create_world.txt  prompt_create_places.txt
workflow/: agent_npc.yaml  agent_world.yaml  initialize.yaml  main.yaml
(+9 files in other folders)
