[package]
name = "simulacra_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
url = { version = "2.3.1", features = ["serde"] }
serde_urlencoded = "0.7.1"
async-trait = "0.1.66"
log = "0.4.17"
simulacra = { path = "../simulacra" }
llm = { path = "../llm" }
crossterm = "0.26.1"
mpsc = "0.1.0"

